update announcement description

--- a/src/pages/config.json
+++ b/src/pages/config.json
@@ -21,7 +21,7 @@
         "target": "_self"
       }
     ],
-    "description": "Compose Your Platform",
+    "description": "Ready to unleash the invisible?",
     "title": "Mia Platform v14 is now available!"
   },
   "featureGrid": [
