--- a/src/pages/config.json
+++ b/src/pages/config.json
@@ -27,46 +27,45 @@
   "featureGrid": [
     {
       "description": "Discover how to govern and industrialize your entire cloud-native development and operations lifecycle.",
-      "icon": "/img/homepage/platform-engineering-enablement.svg",
+      "icon": "mia-platform-console",
       "link": "/docs/development_suite/overview-dev-suite",
       "target": "_self",
       "title": "Mia-Platform Console"
     },
     {
-      "description": "Learn how to visually build and orchestrate microfrontends for modern, scalable web applications.",
-      "icon": "/img/homepage/self-service-application-development.svg",
-      "link": "/docs/microfrontend-composer/what-is",
-      "target": "_self",
-      "title": "Microfrontend Composer"
-    },
-    {
-      "description": "Find out how to make real-time, data-driven decisions with always-on, constantly updated data.",
-      "icon": "/img/homepage/real-time-data-integration.svg",
-      "link": "/docs/fast_data/what_is_fast_data",
-      "target": "_self",
-      "title": "Mia-Platform Fast Data"
-    },
-    {
       "description": "Discover how to easily find, understand, and effectively govern all of your company's data assets.",
-      "icon": "/img/homepage/secure-platform-operations.svg",
+      "icon": "data-catalog",
       "link": "/docs/data_catalog/overview_data_catalog",
       "target": "_self",
       "title": "Data Catalog"
     },
     {
+      "description": "Find out how to make real-time, data-driven decisions with always-on, constantly updated data.",
+      "icon": "real-time-data-integration",
+      "link": "/docs/fast_data/what_is_fast_data",
+      "target": "_self",
+      "title": "Mia-Platform Fast Data"
+    },
+    {
+      "description": "Learn how to visually build and orchestrate microfrontends for modern, scalable web applications.",
+      "icon": "mfe-composer",
+      "link": "/docs/microfrontend-composer/what-is",
+      "target": "_self",
+      "title": "Microfrontend Composer"
+    },
+    {
       "description": "Explore how to manage and reuse software components, APIs, and microservices via a self-service catalog.",
-      "icon": "/img/homepage/ai-agent-lifecycle-management.svg",
+      "icon": "software-catalog",
       "link": "/docs/software-catalog/overview",
       "target": "_self",
       "title": "Software Catalog"
     },
     {
-      "backgroundImage": "/img/homepage/ai.jpg",
       "description": "Find out how to efficiently orchestrate, monitor, and manage your runtime environments with ready-to-use components.",
-      "link": "/docs/marketplace/overview_marketplace",
-      "title": "Runtime Components",
+      "icon": "runtime-environment",
+      "link": "/docs/software-catalog/overview",
       "target": "_self",
-      "type": "image"
+      "title": "Runtime Components"
     }
   ],
   "beginnersSection": {
