--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "@docusaurus/core": "3.8.1",
     "@docusaurus/faster": "^3.8.1",
+    "@docusaurus/plugin-client-redirects": "^3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
-    "@mia-platform/console-types": "^0.38.11",
     "@mdx-js/react": "^3.0.0",
+    "@mia-platform/console-types": "^0.38.11",
     "clsx": "^2.0.0",
     "docusaurus-json-schema-plugin": "^1.15.0",
+    "medium-zoom": "^1.1.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
