--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "prettier": "3.6.2",
     "prompts": "^2.4.2"
   },
+  "overrides": {
+    "marked": "^15.1.0"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
