--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
     "prompts": "^2.4.2"
   },
   "overrides": {
-    "marked": "^15.1.0"
+    "marked": "15.0.12"
   },
   "resolutions": {
-    "marked": "^15.1.0"
+    "marked": "15.0.12"
   },
   "browserslist": {
     "production": [
