fix links in release-note and add _self for internal link

--- a/src/config/release-notes/release-note-v14-1-0.json
+++ b/src/config/release-notes/release-note-v14-1-0.json
@@ -21,14 +21,14 @@
           "description": [
             "Infrastructure Projects now support Azure DevOps as a Git provider.",
             "This addition allows you to manage your infrastructure configurations directly through Azure DevOps repositories, extending the flexibility of your Git provider integrations.",
-            "To discover more, visit the related [documentation page](/products/console/project-configuration/infrastructure-project.md)."
+            "To discover more, visit the related [documentation page](/docs/products/console/project-configuration/infrastructure-project)."
           ]
         },
         {
           "title": "Improved customization of Marketplace items",
           "description": [
-            "From now on, for on-premise installations, it is possible to define a set of regex rules to apply during [MarketplaceSync job](/infrastructure/self-hosted/installation-chart/helm-values/45_marketplace.md) with corresponding replacement values directly in the Helm chart. This allows you to precisely rewrite image registry paths as needed.",
-            "For more details, check out the [documentation](/runtime-components/overview_marketplace.md#edit-mia-platform-catalog-items)."
+            "From now on, for on-premise installations, it is possible to define a set of regex rules to apply during [MarketplaceSync job](/docs/infrastructure/self-hosted/installation-chart/helm-values/45_marketplace) with corresponding replacement values directly in the Helm chart. This allows you to precisely rewrite image registry paths as needed.",
+            "For more details, check out the [documentation](/docs/runtime-components/overview_marketplace#edit-mia-platform-catalog-items)."
           ]
         }
       ],
@@ -47,7 +47,7 @@
           "title": "Back-Lit Library",
           "description": [
             "The new version `v1.5.20` of the back-kit library is available!",
-            "Refer to back-kit [changelog](/products/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions."
+            "Refer to back-kit [changelog](/docs/products/microfrontend-composer/back-kit/changelog) for finer-grained details of new versions."
           ]
         }
       ],
@@ -68,7 +68,7 @@
           "title": "Orchestrator Generator Template 1.0.0",
           "description": [
             "The Orchestrator Generator template has been published in the Marketplace.",
-            "For usage instructions and setup details, refer to the [official documentation](/products/console/company-configuration/providers/extensions/orchestrator-generator/overview.mdx)"
+            "For usage instructions and setup details, refer to the [official documentation](/docs/products/console/company-configuration/providers/extensions/orchestrator-generator/overviewx)"
           ]
         },
         {
@@ -77,9 +77,9 @@
             "The Integration Connector Agent received new updates to enable:",
             "- aggregating information from Cloud Vendors (specifically GCP, AWS and Azure)",
             "- receiving events from GitHub webhooks",
-            "- build custom processors with Golang code, thanks to the new `rpc-plugin` processors and the [Integration Connector Agent Processor Template](https://github.com/mia-platform-marketplace/integration-connector-agent-processor)",
+            "- build custom processors with Golang code, thanks to the new `rpc-plugin` processors and the [Integration Connector Agent Processor Template](/docshttps://github.com/mia-platform-marketplace/integration-connector-agent-processor)",
             "",
-            "To learn more about all the features and how to configure it, visit the [official documentation](/runtime-components/plugins/integration-connector-agent/10_overview.md)."
+            "To learn more about all the features and how to configure it, visit the [official documentation](/docs/runtime-components/plugins/integration-connector-agent/10_overview)."
           ]
         }
       ],
