--- a/src/config/release-notes/release-note-v14-0-1.json
+++ b/src/config/release-notes/release-note-v14-0-1.json
@@ -23,7 +23,7 @@
           "title": "Secrets support in Flow Manager Configurator",
           "description": [
             "Starting from version `2.7.0` of the Flow Manager service, it is now possible to instruct the service to use **secrets** in specific parts of the configuration provided via the Configurator.",
-            "For details on how to use this feature, please refer to the [official documentation](/products/console/api-console/api-design/flow-manager-configurator/overview.md#secrets)."
+            "For details on how to use this feature, please refer to the [official documentation](/docs/products/console/api-console/api-design/flow-manager-configurator/overview#secrets)."
           ]
         },
         {
@@ -50,7 +50,7 @@
           "title": "Back-kit",
           "description": [
             "The new version `v1.5.18` of the back-kit library is available!",
-            "Refer to back-kit [changelog](/products/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions."
+            "Refer to back-kit [changelog](/docs/products/microfrontend-composer/back-kit/changelog) for finer-grained details of new versions."
           ]
         },
         {
@@ -78,7 +78,7 @@
           "description": [
             "The new version `2.7.0` of the Flow Manager Service is available!",
             "The Flow Manager supports the resolution of Kubernetes secrets for a set of configuration properties.",
-            "Please refer to the [official documentation](/runtime-components/plugins/flow-manager-service/30_configuration.md#secrets-resolution) for more details."
+            "Please refer to the [official documentation](/docs/runtime-components/plugins/flow-manager-service/30_configuration#secrets-resolution) for more details."
           ]
         },
         {
