--- a/src/config/release-notes/release-note-v14-0-2.json
+++ b/src/config/release-notes/release-note-v14-0-2.json
@@ -11,14 +11,14 @@
           "title": "Define Allow rules on Fine-Grained Access Control",
           "description": [
             "Users can now define a list of rules that allow a specific action in Design by specificing an `allowedRuleSet`. By doing so, only changes explicitly permitted by these rules are allowed, while all others are denied.",
-            "Discover more about this improvement to the Fine-Grained Access Control functionality in the [dedicated documentation](/products/console/api-console/api-design/fine-grained-access-control.md)."
+            "Discover more about this improvement to the Fine-Grained Access Control functionality in the [dedicated documentation](/docs/products/console/api-console/api-design/fine-grained-access-control)."
           ]
         },
         {
           "title": "Define multiple actions for a single rule on Fine-Grained Access Control",
           "description": [
             "Users can now configure rules for the Fine-Grained Access Control specifying multiple actions for a single rule.",
-            "You can discover more about this feature in the related [documentation page](/products/console/api-console/api-design/fine-grained-access-control.md)."
+            "You can discover more about this feature in the related [documentation page](/docs/products/console/api-console/api-design/fine-grained-access-control)."
           ]
         }
       ],
@@ -53,9 +53,9 @@
             "-  GET `/assets/export`",
             "- POST `/assets/export/init`",
             "",
-            "For more information, check the Data Catalog [compatibility matrix](/products/data_catalog/compatibility_matrix.md).",
+            "For more information, check the Data Catalog [compatibility matrix](/docs/products/data_catalog/compatibility_matrix).",
             "",
-            "Check the full list of capabilities of export feature in the specific [documentation page](/products/data_catalog/frontend/data_catalog_assets.mdx#export-metadata)."
+            "Check the full list of capabilities of export feature in the specific [documentation page](/docs/products/data_catalog/frontend/data_catalog_assetsx#export-metadata)."
           ]
         }
       ],
@@ -74,7 +74,7 @@
         {
           "title": "Oauth Login Site 8.1.3",
           "description": [
-            "Oauth Login Site is now available as a Marketplace plugin. Check the [documentation](/runtime-components/plugins/oauth-login-site/10_overview.md) and service [changelog](/runtime-components/plugins/oauth-login-site/changelog.md) for more details."
+            "Oauth Login Site is now available as a Marketplace plugin. Check the [documentation](/docs/runtime-components/plugins/oauth-login-site/10_overview) and service [changelog](/docs/runtime-components/plugins/oauth-login-site/changelog) for more details."
           ]
         }
       ],
